# mnt_surveillance

./: README.md
mnt_surveillance/: CMakeLists.txt  package.xml
mnt_surveillance/scripts/: ros_scripts.sh
mnt_surveillance_bringup/: CMakeLists.txt  package.xml
mnt_surveillance_bringup/launch/: camera_node.launch.py  image_display.launch.py  master_node.launch.py  recorder_node.launch.py
mnt_surveillance_bringup/params/: camera_node_params.yaml  master_node_params.yaml
mnt_surveillance_camera_node/: CMakeLists.txt  Tasks_n_Notes.md  package.xml
mnt_surveillance_camera_node/include/mnt_surveillance_camera_node/: camera_node.hpp
mnt_surveillance_camera_node/include/mnt_surveillance_camera_node/cameras/: camera.hpp  camera_encoded.hpp  file_reader_encoded.hpp  fixed_frame_encoded.hpp  mp4_video.hpp  random_noise.hpp  webcam.hpp  webcam_encoded.hpp
mnt_surveillance_camera_node/include/mnt_surveillance_camera_node/codecs/: codec_N1.hpp  codec_v1.hpp
mnt_surveillance_camera_node/include/mnt_surveillance_camera_node/misc/: stopwatch.hpp
mnt_surveillance_camera_node/src/: camera_node.cpp  node_main.cpp
mnt_surveillance_camera_node/src/cameras/: camera.cpp  camera_encoded.cpp  file_reader_encoded.cpp  fixed_frame_encoded.cpp  mp4_video.cpp  random_noise.cpp  webcam.cpp  webcam_encoded.cpp
mnt_surveillance_camera_node/src/codecs/: codec_N1.cpp  codec_v1.cpp
mnt_surveillance_camera_node/src/misc/: stopwatch.cpp
mnt_surveillance_master_node/: CMakeLists.txt  package.xml
mnt_surveillance_master_node/include/mnt_surveillance_master_node/: alarm.hpp  img_decoder.hpp  master_node.hpp  placeholder.txt  recorder.hpp
mnt_surveillance_master_node/include/mnt_surveillance_master_node/analyzers/: analyzer.hpp
mnt_surveillance_master_node/include/mnt_surveillance_master_node/codecs/: codec_v1.hpp
mnt_surveillance_master_node/src/: alarm.cpp  img_decoder.cpp  master_node.cpp  node_main.cpp  recorder.cpp  recorder_main.cpp
mnt_surveillance_master_node/src/analyzers/: analyzer.cpp
mnt_surveillance_master_node/src/codecs/: codec_v1.cpp
mnt_surveillance_node/: CMakeLists.txt  package.xml
